# benchmarks

./: .gitignore
memory/: README
memory/stassuij/: 00README  CheckAll  Main.F90  Makefile  Makefile.gfortran  Makefile.intel  Makefile.intel.mpi  RunAll  fbngrids.fh  ispin.fh  lbp.fh  ncore.fh  pairs.fh  parallel.fh  param_m0.fh  parameters.fh  paramnuc.fh  params.fh  pass.fh  speed.fh  spin.fh  stassterms.f90  stassuij-sp-complex.f  stassuij.f  tbodyc.fh
mpi4py-c++-f90-create-mm/: Makefile  README  fortmthds.f  linkcheck.C  pycintfc.C  samarcrun.py
mpi4py-c++-f90-create-mm/example/: samarcrun.py
mpi4py-c++-f90-create-mm/swig/: Makefile  samint.i
poisson/: README  poisson_openmp.cpp
poisson/classDsoEx/: CMakeLists.txt  jacobi.cpp  jacobi.h  main.cpp  thisconfig.delphi.sh  thisconfig.sh  timeSoln.cpp  vectorOps.cpp  vectorOps.h
poisson/sharedLibEx/: CMakeLists.txt  main.cpp  poissonOmpLib.cpp  thisconfig.sh
poisson/staticLibEx/: CMakeLists.txt  main.cpp  thisconfig.armstrong.mpi.sh
prime/: prime_mpi.f90  prime_serial.f90
swig/: Makefile  fortmthds.f  mm.c  mm.h  mm_test.py
swig/swig/: Makefile  mm.i
threading/omp/: omp_mm.c
threading/pthreads/: arrayloops.c  mpithreads_mpi.c  (+4 more)
threading/tacc_1/: CMakeLists.txt  README  batch.slurm  opt.C  psum.cpp  psum_openmp.cpp  psum_openmp_2.cpp  psum_serial.cpp  psum_stdVec.cpp  psum_tbb_partitionBuffer.cpp  psum_tbb_rankBuffer.cpp  psum_tbb_singleBuffer.cpp  run-openmp.sh  run-tbb.sh  runTest_1.py  tacc_cpu_info.txt  tbb_partition_sample.txt  thisconfig.maverick.sh  thisconfig.maverick.tau-openmp.sh  thisconfig.maverick.tau-tbb.sh  thisconfig.sh  thisconfig.stampede.sh
threading/tacc_1/cmake/Modules/: FindTBB.cmake
threading/tacc_1/run1_data/: histogramPsum.ipynb  maverick_openmp_1.txt  maverick_serial
threading/tacc_1/run2_data/: histogramPsum.ipynb  maverick_openmp-2_1.txt  maverick_openmp-2_12.txt  maverick_openmp-2_14.txt  maverick_openmp-2_18.txt  maverick_openmp-2_19.txt  maverick_openmp-2_20.txt  maverick_openmp-2_25.txt  maverick_openmp-2_30.txt  maverick_openmp-2_35.txt  maverick_openmp-2_4.txt  maverick_openmp_1.txt  maverick_openmp_10.txt  maverick_openmp_12.txt  maverick_openmp_14.txt  maverick_openmp_16.txt  maverick_openmp_18.txt  maverick_openmp_19.txt  maverick_openmp_2.txt  maverick_openmp_20.txt  maverick_openmp_25.txt  maverick_openmp_2_10.txt  maverick_openmp_2_16.txt  maverick_openmp_2_2.txt  maverick_openmp_2_40.txt  maverick_openmp_2_8.txt  maverick_openmp_30.txt  maverick_openmp_35.txt  maverick_openmp_4.txt  maverick_openmp_40.txt  maverick_openmp_8.txt  maverick_psum.txt  maverick_serial  maverick_stdVec_1.txt  maverick_stdVec_10.txt  maverick_stdVec_12.txt  maverick_stdVec_14.txt  maverick_stdVec_16.txt  maverick_stdVec_18.txt  maverick_stdVec_19.txt  (+53 more)
threading/tacc_1/stracePids/: stracePid_psum_openmp_8.1331  stracePid_psum_openmp_8.1331.REMOVED.git-id  stracePid_psum_openmp_8.1332  stracePid_psum_openmp_8.1333  stracePid_psum_openmp_8.1333.REMOVED.git-id  stracePid_psum_openmp_8.1334  stracePid_psum_openmp_8.1334.REMOVED.git-id  stracePid_psum_openmp_8.1335  stracePid_psum_openmp_8.1335.REMOVED.git-id  stracePid_psum_openmp_8.1336  stracePid_psum_openmp_8.1336.REMOVED.git-id  stracePid_psum_openmp_8.1337  stracePid_psum_openmp_8.1337.REMOVED.git-id  stracePid_psum_openmp_8.1338  stracePid_psum_openmp_8.1338.REMOVED.git-id  stracePid_psum_openmp_8.1339  stracePid_psum_openmp_8.1339.REMOVED.git-id  stracePid_psum_tbb_rankBuffer_8.1479  stracePid_psum_tbb_rankBuffer_8.1480  stracePid_psum_tbb_rankBuffer_8.1481  stracePid_psum_tbb_rankBuffer_8.1482  stracePid_psum_tbb_rankBuffer_8.1483  stracePid_psum_tbb_rankBuffer_8.1484  stracePid_psum_tbb_rankBuffer_8.1485  stracePid_psum_tbb_rankBuffer_8.1486  stracePid_psum_tbb_singleBuffer_8.1356  stracePid_psum_tbb_singleBuffer_8.1357  stracePid_psum_tbb_singleBuffer_8.1357.REMOVED.git-id  stracePid_psum_tbb_singleBuffer_8.1358  stracePid_psum_tbb_singleBuffer_8.1358.REMOVED.git-id  stracePid_psum_tbb_singleBuffer_8.1359  stracePid_psum_tbb_singleBuffer_8.1359.REMOVED.git-id  stracePid_psum_tbb_singleBuffer_8.1360  stracePid_psum_tbb_singleBuffer_8.1360.REMOVED.git-id  stracePid_psum_tbb_singleBuffer_8.1361  stracePid_psum_tbb_singleBuffer_8.1361.REMOVED.git-id  stracePid_psum_tbb_singleBuffer_8.1362  stracePid_psum_tbb_singleBuffer_8.1362.REMOVED.git-id  stracePid_psum_tbb_singleBuffer_8.1363  stracePid_psum_tbb_singleBuffer_8.1363.REMOVED.git-id
(+30 files in other folders)
